modules/cli/src/test/resources/good/disamb/imports/Import01.scr
module good.disamb.imports.Import01;


import good.disamb.imports.Import01a;
import good.disamb.imports.pack1.Import01b as Test4;  // <- "Test3" as Test4


global protocol Import1(role A, role B)
{
	1() from A to B;
	do good.disamb.imports.Import01a.Import1a(A, B);
	do Test4.Import1b(A, B);
}
